"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

gtk/text.c: Remove call to void_callback() for MSG_TYPE_MONUMENT - if there
  is no code to handle it, no reason to set the callback.  Fixes bug 1759860 -
  gravestone messages go to stdout and not client window.
MSW 2007-09-23

gtk-v2/src/metaserver.c: Modify metaserver_connect_to so it can connect to
  servers running on different ports (eg, localhost:13328).  Gtk1 client
  already handles this fine, so this is only a change for the gtk2 client.
MSW 2007-09-16

Improve metaserver handling some - in particular, if server is listed
on both metaserver 1 & 2, listed it only once.  Also, for gtk2 client,
fix handling of not showing cached entries if they are listed on the
metaserver.  Add filtering of protocol versions, so we only show player
compatible servers.
--
common/metaserver.c: Add check_server_version() to do version checking.
  Add checks to find duplicate server entries.
gtk-v2/src/metaserver.c: Move retrieval of data from metaserver before
  adding cached entries to table - otherwise, can not detect duplicates.
  Add check to proper version information.
MSW 2007-09-13

Make metaserver1 gather it's data in its own thread.  Brought back from trunk
common/metaserver.c: Add ms1_is_running flag, re-work some of the metaserver1
  logic so the function structure makes it easy to spawn the thread,
  rename metaserver2_check_status() to just metaserver_check_status()
gtk-v2/src/metaserver.c: Change call to metaserver_check_status(), resort
  data after getting all info from sever.
MSW 2007-08-31

Add support for metaserver2 in client.  For the X11/C clients, they use basic
interface (drawn in text window, select a number), so no changes to the GUI
portions of those clients was done - gtk2 uses window, so some extra work
there.  Brought back from trunk
--
*/Makefile.in: rebuilt
acinclude.m4: New file - added for LIBCURL_CHECK_CONFIG macro support.